--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
     <div>
         <dialog>
             <button autofocus>Close</button>
-            <p>This modal dialog has a groovy backdrop!</p>
+            <p>Add a new book:</p>
+            <div>
+                <label for="book-title">Book Title</label>
+                <input type="text" id="book-title" name="book-title">
+            </div>
+            <div>
+                <label for="book-author">Book Author</label>
+                <input type="text" id="book-author" name="book-author">
+            </div>
+            <div>
+                <label for="book-pages">Number of pages</label>
+                <input type="number" id="book-pages" name="book-pages">
+            </div>
+            <div>
+                <form action="">
+                    <p>Have you read this book?</p>
+                    <input type="radio" name="book-read" id="book-read" value="yes"><br>
+                    <label for="yes">Yes</label><br>
+                    <input type="radio" name="book-read" id="book-notread" value="no"><br>
+                    <label for="no">No</label><br>
+                </form>
+            </div>
+            <button id="submitNewBook">Submit</button>
           </dialog>
           <button id="showDialogButton">New Book</button>
           
