add style to the page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>My Library</h1>
@@ -36,7 +39,10 @@
                 <button type="submit" id="submitNewBook">Submit</button>
             </form>
         </dialog>
-        <button id="showDialogButton">New Book</button>
+        <div id="button-new">
+            <button id="showDialogButton">New Book</button>
+        </div>
+
     </div>
 
     <ul id="libraryList"></ul>
